2010-04-21  Jackson Harper  <jackson@ximian.com>

	* playlist.cpp: Make sure we stop the parser on error.

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* textblock.h: Add another missing default value.

2010-04-21  Jackson Harper  <jackson@ximian.com>

	* playlist.cpp: Fix typo so we allocate the correct amount of
	memory here.

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* deployment.h: Add in some more missing default values.

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* brush.h:
	* viewbox.h:
	* textblock.h:
	* textblock.cpp: Add in some missing default values.

2010-04-20  Alan McGovern  <amcgovern@novell.com>

	* brush.h:
	* enums.h:
	* src.mdp:
	* glyphs.h:
	* enums.cpp:
	* textbox.h:
	* printing.h:
	* Makefile.am:
	* uielement.h:
	* textblock.h:
	* deployment.h:
	* inputscope.h:
	* usercontrol.h: Add new types and DPs so that the SL4
	  generated DefaultValue tests can compile.

2010-04-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp: Don't free the static platform_dir in the instance dtor.
	Fixes a crash in tests that use >1 plugins.

2010-04-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/install-dialog.cpp: Calculate path to lunar-launcher using
	platform_dir.

	* deployment.cpp|h: Store platform_dir and make it available to the rest
	of moonlight.

2010-04-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* runtime.cpp|h: Make the oob executable configurable at runtime.

	* pal/gtk/install-dialog.cpp: We can't call the oob execution script
	'lunar-launcher', since we now executing with our own lunar-launcher
	executable instead of firefox. It'll end up launching itself recursively.

2010-04-19  Alan McGovern  <amcgovern@novell.com>

	* dependencyobject.h:
	* dependencyobject.cpp: Use a flag (registering_names) to mark
	  elements which are inside a call to
	  [Un]RegisterAllNamesRootedAt so that we can handle the case
	  where there's a cycle in local values. Fixes the last of drt
	  997.
